test-cases/final-dump/bad_assign.wybe
def increment(!x: int) {
    ?x = x+1
}

l = 1
increment(!l)
